force-app/main/default/objects/SandboxUserRequest__c/SandboxUserRequest__c.object-meta.xml
<CustomObject>
    <description>Requests for access to a Sandbox</description>
    <label>Sandbox User Request</label>
    <nameField>
        <displayFormat>Request-{000000}</displayFormat>
        <label>Request Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sandbox User Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>