force-app/main/default/objects/SandboxUserRequest__c/fields/DelegatedGroup__c.field-meta.xml
<CustomField>
    <fullName>DelegatedGroup__c</fullName>
    <description>The name of the Delegated Admin Group this user should be added to.</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the Delegated Admin Group this user should be added to.</inlineHelpText>
    <label>Delegated Group</label>
    <length>80</length>
    <type>Text</type>
</CustomField>