force-app/main/default/objects/SandboxUserRequest__c/fields/DelegatedGroupDetail__c.field-meta.xml
<CustomField>
    <fullName>DelegatedGroupDetail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The status of what happened when trying to add the user to the group.</inlineHelpText>
    <label>Delegated Group Detail</label>
    <length>80</length>
    <type>Text</type>
</CustomField>