force-app/main/default/objects/SandboxUserRequest__c/fields/NbrOfUsers__c.field-meta.xml
<CustomField>
    <fullName>NbrOfUsers__c</fullName>
    <inlineHelpText>How many users are you requesting?</inlineHelpText>
    <label>How Many Users Requested?</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>