force-app/main/default/objects/SandboxUserRequest__c/fields/ProcessNotes__c.field-meta.xml
<CustomField>
    <fullName>ProcessNotes__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Notes about processing the records</inlineHelpText>
    <label>Process Notes</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>