force-app/main/default/objects/SandboxUserRequest__c/fields/ProfileName__c.field-meta.xml
<CustomField>
    <fullName>ProfileName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the profile to use. If the profile is not entered correctly it will result in the user not being created.</inlineHelpText>
    <label>Profile Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>