force-app/main/default/objects/SandboxUserRequest__c/fields/RecordId__c.field-meta.xml
<CustomField>
    <fullName>RecordId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The purpose of this field is to get around an issue where the environments are out of sync so the ids don&apos;t match up in the different systems. Eventually this field shouldn&apos;t be needed.</inlineHelpText>
    <label>Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>