force-app/main/default/objects/SandboxUserRequest__c/fields/RequestorContact__c.field-meta.xml
<CustomField>
    <fullName>RequestorContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contact record of the requestor (based on the email address entered)</inlineHelpText>
    <label>Requestor Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sandbox User Requests</relationshipLabel>
    <relationshipName>SandboxUserRequests</relationshipName>
    <type>Lookup</type>
</CustomField>