force-app/main/default/objects/SandboxUserRequest__c/fields/RequestorEmail__c.field-meta.xml
<CustomField>
    <fullName>RequestorEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The email address of the person making the request</inlineHelpText>
    <label>Enter Your Email (Requestor)</label>
    <type>Email</type>
</CustomField>