force-app/main/default/objects/SandboxUserRequest__c/fields/Resend__c.field-meta.xml
<CustomField>
    <fullName>Resend__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Resend the request to the sandbox</inlineHelpText>
    <label>Resend</label>
    <type>Checkbox</type>
</CustomField>