force-app/main/default/objects/SandboxUserRequest__c/fields/RoleName__c.field-meta.xml
<CustomField>
    <fullName>RoleName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the role to use. If the role is not entered correctly it will result in the user not being created.</inlineHelpText>
    <label>Role Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>