force-app/main/default/objects/SandboxUserRequest__c/fields/SandboxName__c.field-meta.xml
<CustomField>
    <fullName>SandboxName__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The name of the sandbox (as determined by the sandbox instance).</inlineHelpText>
    <label>Sandbox Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>