force-app/main/default/objects/SandboxUserRequest__c/fields/SandboxProfileSetup__c.field-meta.xml
<CustomField>
    <fullName>SandboxProfileSetup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which profile setup was selected for this user setup?</inlineHelpText>
    <label>Sandbox Profile Setup</label>
    <referenceTo>SandboxProfileSetup__c</referenceTo>
    <relationshipLabel>Sandbox User Requests</relationshipLabel>
    <relationshipName>SandboxUserRequests</relationshipName>
    <type>Lookup</type>
</CustomField>