force-app/main/default/objects/SandboxUserRequest__c/fields/SandboxSetup__c.field-meta.xml
<CustomField>
    <fullName>SandboxSetup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Which sandbox is this being requested for?</inlineHelpText>
    <label>Sandbox Setup</label>
    <referenceTo>SandboxSetup__c</referenceTo>
    <relationshipLabel>Sandbox User Requests</relationshipLabel>
    <relationshipName>SandboxUserRequests</relationshipName>
    <type>Lookup</type>
</CustomField>