force-app/main/default/objects/SandboxUserRequest__c/fields/SandboxUserContact__c.field-meta.xml
<CustomField>
    <fullName>SandboxUserContact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>The contact record of the user we&apos;re going to setup in the sandbox</inlineHelpText>
    <label>Sandbox User Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Sandbox User Requests (Sandbox User Contact)</relationshipLabel>
    <relationshipName>SandboxUserContacts</relationshipName>
    <type>Lookup</type>
</CustomField>