force-app/main/default/objects/SandboxUserRequest__c/fields/SandboxUserEmail__c.field-meta.xml
<CustomField>
    <fullName>SandboxUserEmail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>The email of the user to setup in the sandbox</inlineHelpText>
    <label>Sandbox User Email</label>
    <type>Email</type>
</CustomField>