force-app/main/default/objects/SandboxUserRequest__c/fields/UserToMirror__c.field-meta.xml
<CustomField>
    <fullName>UserToMirror__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>If we&apos;re going to copy the attributes from a User to setup in the Sandbox</inlineHelpText>
    <label>User To Mirror</label>
    <referenceTo>User</referenceTo>
    <relationshipName>SandboxUserRequests</relationshipName>
    <type>Lookup</type>
</CustomField>