force-app/main/default/objects/SandboxUserRequest__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Resend__c</columns>
    <columns>SandboxSetup__c</columns>
    <columns>RequestorContact__c</columns>
    <columns>SandboxProfileSetup__c</columns>
    <columns>SandboxUserContact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>